DuPont DevSB/src/objects/pse__Project_Task_Dependency__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskDependencyHelp</customHelpPage>
    <description>Specifies a relationship between two project tasks. If a project task is completed early or late, this has an effect on the start and end date of the task that succeeds it. You can create four standard types of dependency. Dependent tasks have a master-detail relationship with project task dependencies.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Cross_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this link between two tasks spans two projects</description>
        <inlineHelpText>Indicates if this link between two tasks spans two projects</inlineHelpText>
        <label>Cross Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_End_Date_Time__c</fullName>
        <formula>pse__Dependent_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_End_Date__c</fullName>
        <formula>pse__Dependent_Task__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_Start_Date_Time__c</fullName>
        <formula>pse__Dependent_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_Start_Date__c</fullName>
        <formula>pse__Dependent_Task__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task__c</fullName>
        <description>This master-detail lookup references the Project Task that is the dependent Task in this relationship.</description>
        <inlineHelpText>This master-detail lookup references the Project Task that is the dependent Task in this relationship.</inlineHelpText>
        <label>Dependent Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Preceding Tasks</relationshipLabel>
        <relationshipName>Preceding_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Lag_Time_Hours__c</fullName>
        <label>Lag Time (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_End_Date_Time__c</fullName>
        <formula>pse__Preceding_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preceding Task End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_End_Date__c</fullName>
        <formula>pse__Preceding_Task__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preceding Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_Start_Date_Time__c</fullName>
        <formula>pse__Preceding_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preceding Task Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_Start_Date__c</fullName>
        <formula>pse__Preceding_Task__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preceding Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup references the Project Task that is the preceding Task in this relationship.</description>
        <inlineHelpText>This lookup references the Project Task that is the preceding Task in this relationship.</inlineHelpText>
        <label>Preceding Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Dependent Tasks</relationshipLabel>
        <relationshipName>Dependent_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <formula>pse__Dependent_Task__r.pse__Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to Start (FS)</fullName>
                </value>
                <value>
                    <fullName>Start to Start (SS)</fullName>
                </value>
                <value>
                    <fullName>Finish to Finish (FF)</fullName>
                </value>
                <value>
                    <fullName>Start to Finish (SF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Task Dependency</label>
    <nameField>
        <displayFormat>PTD-{0}</displayFormat>
        <label>Project Task Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>